--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Source of http://peter.szocs.info",
   "main": "index.html",
   "scripts": {
+    "postinstall": "gulp production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,7 +30,10 @@
     "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-minify-css": "^1.2.1",
+    "gulp-minify-html": "^1.0.4",
     "gulp-ng-annotate": "^1.1.0",
-    "gulp-uglify": "^1.4.0"
+    "gulp-ssh": "^0.5.2",
+    "gulp-uglify": "^1.4.0",
+    "gulp-usemin": "^0.3.14"
   }
 }
