--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "Website",
+  "name": "Personal_Website",
   "version": "1.0.0",
-  "description": "Source of http://peter.szocs.info",
+  "description": "If you see this, please contact me via http://peter.szocs.info",
   "main": "index.html",
   "scripts": {
-    "postinstall": "gulp production",
+    "postinstall": "gulp production --production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,9 +23,11 @@
   "homepage": "https://github.com/gepesz/peter.szocs.info",
   "devDependencies": {
     "browser-sync": "^2.9.1",
+    "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-header": "^1.7.1",
+    "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^1.0.0-rc.1",
@@ -34,6 +36,7 @@
     "gulp-ng-annotate": "^1.1.0",
     "gulp-ssh": "^0.5.2",
     "gulp-uglify": "^1.4.0",
-    "gulp-usemin": "^0.3.14"
+    "gulp-usemin": "^0.3.14",
+    "gulp-util": "^3.0.6"
   }
 }
