--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/gepesz/peter.szocs.info",
   "devDependencies": {
     "browser-sync": "^2.9.1",
+    "buffer-to-vinyl": "^1.0.1",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -34,9 +35,13 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
     "gulp-ng-annotate": "^1.1.0",
+    "gulp-ng-config": "^1.2.1",
     "gulp-ssh": "^0.5.2",
     "gulp-uglify": "^1.4.0",
     "gulp-usemin": "^0.3.14",
     "gulp-util": "^3.0.6"
+  },
+  "dependencies": {
+    "nodemailer": "^1.4.0"
   }
 }
