--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-git": "^1.4.0",
     "gulp-header": "^1.7.1",
     "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.11.2",
