--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-minify-html": "^1.0.4",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-ng-config": "^1.2.1",
+    "gulp-prompt": "^0.1.2",
     "gulp-ssh": "^0.5.2",
     "gulp-uglify": "^1.4.0",
     "gulp-usemin": "^0.3.14",
