--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gepesz/peter.szocs.info.git"
+    "url": "https://github.com/pitanyc/peter.szocs.info.git"
   },
   "keywords": [
     "Peter",
@@ -18,9 +18,9 @@
   "author": "Peter Szocs",
   "license": "Apache License 2.0",
   "bugs": {
-    "url": "https://github.com/gepesz/peter.szocs.info/issues"
+    "url": "https://github.com/pitanyc/peter.szocs.info/issues"
   },
-  "homepage": "https://github.com/gepesz/peter.szocs.info",
+  "homepage": "https://github.com/pitanyc/peter.szocs.info",
   "devDependencies": {
     "browser-sync": "^2.9.1",
     "buffer-to-vinyl": "^1.0.1",
