--- a/package.json
+++ b/package.json
@@ -44,7 +44,5 @@
     "gulp-usemin": "^0.3.14",
     "gulp-util": "^3.0.6"
   },
-  "dependencies": {
-    "nodemailer": "^1.4.0"
-  }
+  "dependencies": {}
 }
