--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "If you see this, please contact me via http://peter.szocs.info",
   "main": "index.html",
   "scripts": {
-    "postinstall": "gulp production --production",
+    "postinstall": "gulp production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +21,7 @@
     "url": "https://github.com/pitanyc/peter.szocs.info/issues"
   },
   "homepage": "https://github.com/pitanyc/peter.szocs.info",
-  "devDependencies": {
+  "dependencies": {
     "browser-sync": "^2.9.1",
     "buffer-to-vinyl": "^1.0.1",
     "del": "^2.0.2",
@@ -43,6 +43,5 @@
     "gulp-uglify": "^1.4.0",
     "gulp-usemin": "^0.3.14",
     "gulp-util": "^3.0.6"
-  },
-  "dependencies": {}
+  }
 }
