--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/pitanyc/peter.szocs.info",
   "dependencies": {
+    "bluebird": "^3.3.4",
+    "body-parser": "^1.15.0",
     "browser-sync": "^2.9.1",
     "buffer-to-vinyl": "^1.0.1",
     "compression": "^1.6.1",
@@ -34,6 +36,7 @@
     "express": "^4.13.4",
     "express-flash": "0.0.2",
     "express-session": "^1.13.0",
+    "fs": "0.0.2",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-concat": "^2.6.0",
@@ -52,8 +55,10 @@
     "gulp-uglify": "^1.4.0",
     "gulp-usemin": "^0.3.14",
     "gulp-util": "^3.0.6",
+    "moment": "^2.12.0",
     "morgan": "^1.7.0",
     "nodemailer": "^2.3.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "path": "^0.12.7"
   }
 }
