--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,6 @@ bower_components
 
 # Ignore build dirs
 ###################
-prod/
-logs/
 vendor/
 
 # Ignore generated files
@@ -22,3 +20,7 @@ vendor/
 *.css
 all.js
 config.js
+
+# Ignore logs
+#############
+.log
