--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.html",
   "scripts": {
     "postinstall": "gulp $NODE_ENV",
+    "start": "node ./src/server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
